--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#F26B38">
 </head>
 
-<body>
+<body>  <div id="player"></div>
     <br>
     <br>
     <br>
@@ -108,13 +108,45 @@
             <div class="card-front_inside">
                 <br> <br> <br>
                  <div class="polaroid">
-                    <div class="img" style="background-image: url('file.jpg')"></div>
+                    <div class="img" style="background-image: url('img/1.jpg')"></div>
                 </div> 
-                <div class="shadow"></div> 
             </div>
 
         </div>
         <script src="js/index.js"></script>
+
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script>
+        // Cargar la API del reproductor de YouTube
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // Crear el reproductor de YouTube
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                height: '0',
+                width: '0',
+                playerVars: {
+                    'listType': 'playlist',
+                    'list': 'PLz2WinjBUXrrOxiUG2jK-3g5GHu6NjKZp&si=aEkghuaoydMRk3Rc', // ID de la lista de reproducción
+                    'autoplay': 1,
+                    'controls': 0,
+                    'loop': 1,
+                    'mute': 1
+                },
+                events: {
+                    'onReady': onPlayerReady
+                }
+            });
+        }
+
+        function onPlayerReady(event) {
+            event.target.playVideo();
+        }
+    </script>
 </body>
 
 </html>
