--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 width: '0',
                 playerVars: {
                     'listType': 'playlist',
-                    'list': 'PLz2WinjBUXrrOxiUG2jK-3g5GHu6NjKZp&si=aEkghuaoydMRk3Rc', // ID de la lista de reproducción
+                    'list': 'PLz2WinjBUXrrOxiUG2jK-3g5GHu6NjKZp', // ID de la lista de reproducción
                     'autoplay': 1,
                     'controls': 0,
                     'loop': 1,
