--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 </head>
 
 <body>
-    <iframe id="player" width="0" height="0" src="https://www.youtube.com/embed/videoseries?list=PLz2WinjBUXrrOxiUG2jK-3g5GHu6NjKZp&autoplay=1&loop=1&controls=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=WwcCqZOGRwEm61gS&amp;list=PLz2WinjBUXrrOxiUG2jK-3g5GHu6NjKZp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
     <br>
     <br>
