--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         }
 
         #spotify-player {
-            position: absolute;
-            width: 300px;
+            position: fixed;
             bottom: 10px;
-            right: 10px;
+            left: 10px;
+            width: 100%;
+            max-width: 300px;
+            height: 80px;
+            display: none;
+            /* Oculto inicialmente */
         }
-
     </style>
 </head>
 
@@ -128,9 +131,16 @@
         </div>
     </div>
     <div id="spotify-player">
-         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5T5SDiLaCZakdqxq3Tb3j7?utm_source=generator&autoplay=1" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  
+        <iframe id="spotify-iframe" style="border-radius:12px" src="" width="100%" height="80" frameborder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
+    <script>
+        document.getElementById('open').addEventListener('click', function() {
+            var iframe = document.getElementById('spotify-iframe');
+            iframe.src = "https://open.spotify.com/embed/playlist/5T5SDiLaCZakdqxq3Tb3j7?utm_source=generator&autoplay=1";
+            document.getElementById('spotify-player').style.display = 'block';
+        });
+    </script>
     <script src="js/index.js"></script>
 
 
