--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <meta name="viewport" content="width=1200, initial-scale=1.0"> <!-- Configura un ancho fijo -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>Happy 27 Every Month</title>
@@ -13,16 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <meta name="theme-color" content="#F26B38">
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
         #spotify-player {
             position: fixed;
             bottom: 10px;
@@ -30,8 +22,6 @@
             width: 100%;
             max-width: 300px;
             height: 80px;
-            display: none;
-            /* Oculto inicialmente */
         }
     </style>
 </head>
@@ -130,7 +120,7 @@
 
         </div>
     </div>
-    <div id="spotify-player">
+    <div id="spotify-player" style="display: block;">
         <iframe id="spotify-iframe" style="border-radius:12px" src="" width="100%" height="80" frameborder="0" allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
